src/app/styles/index.scss
@import 'reset';
@import 'variables/global';
@import 'themes/normal';
@import 'themes/dark';

@font-face {
  font-family: 'SF Pro Display';
  src: url('./../../shared/assets/fonts/SF-Pro-Display-Thin.ttf');
  font-weight: 200;
}
@font-face {
  font-family: 'SF Pro Display';
  src: url('./../../shared/assets/fonts/SF-Pro-Display-Light.ttf');
  font-weight: 300;
}
@font-face {
  font-family: 'SF Pro Display';
  src: url('./../../shared/assets/fonts/SF-Pro-Display-Regular.ttf');
  font-weight: 400;
}
@font-face {
  font-family: 'SF Pro Display';
  src: url('./../../shared/assets/fonts/SF-Pro-Display-Medium.ttf');
  font-weight: 500;
}
@font-face {
  font-family: 'SF Pro Display';
  src: url('./../../shared/assets/fonts/SF-Pro-Display-Semibold.ttf');
  font-weight: 600;
}
@font-face {
  font-family: 'SF Pro Display';
  src: url('./../../shared/assets/fonts/SF-Pro-Display-Bold.ttf');
  font-weight: 700;
}
@font-face {
  font-family: 'SF UI Text';
  src: url('./../../shared/assets/fonts/SF-UI-Text-Regular.ttf');
  font-weight: 400;
}
@font-face {
  font-family: 'SF Mono';
  src: url('./../../shared/assets/fonts//SF-Mono.ttf');
  font-weight: 400;
}
html {
  overflow: hidden;
}
body {
  font-size: 16px;
  font-family: var(--font-family-main);
  overflow-anchor: none;
  overflow: hidden;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.app {
  background: var(--bg-color);
  color: var(--main-text-color);
  min-height: 100vh;
  overflow-y: hidden;
}

// * {
//   transition: background-color 0.3s linear;
// }

.content-page {
  position: relative;
  height: calc(100vh - 44px);
  width: 100%;
  &.full .page-wrapper {
    left: 0px;
    border-left: 1px solid var(--bg-color);
  }
}
.page-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-grow: 1;
  height: calc(100vh - 44px);
  left: var(--sidebar-with);
  border-left: 1px solid var(--border-color);
  transition: left 0.25s;
  background: var(--bg-color);
  position: absolute;
  right: 0;
}

h1,
h2 {
  all: unset;
}

